--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
     position: relative;
+    display: flex;
 }
 
-.main-control {
+.side-control-menu {
     width: 28%;
     height: 100vh;
     min-width: 300px;
@@ -39,6 +40,7 @@ header h1 {
 .one-line-form input, .one-line-form button {
     background-color: #202833;
     border: 1px solid #c5c6c8;
+    height: 33.6px;
 }
 
 .one-line-form input {
@@ -48,6 +50,7 @@ header h1 {
     border-right: 0;
     border-radius: 20px 0 0 20px;
     padding-left: 15px;
+    padding-right: 0;
     color: #c5c6c8;
 }
 
@@ -69,16 +72,16 @@ header h1 {
     cursor: default;
 }
 
-.todo-list {
+.list-container {
     margin: 20px 30px;
-    max-height: 60%;
+    max-height: 65vh;
     overflow-y: scroll;
     border-radius: 10px;
     scrollbar-width: thin;
     scrollbar-color: #202833 transparent;
 }
 
-.todo-list-item {
+.item-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,16 +90,28 @@ header h1 {
     border: 1px solid #0b0c10;
 }
 
-.todo-list-item button {
+.item-container:hover {
+    background-color: #282f38;
+}
+
+.item-container:hover button {
+    background-color: #282f38;
+}
+
+.item-container button {
     background-color: #202833;
     border: 0;
 }
 
-.todo-list-item .icon {
+.item-container button:hover {
+    cursor: pointer;
+}
+
+.item-container .icon {
     width: 20px;
 }
 
-.new-list {
+.new-category {
     width: 90%;
     height: 61.11px;
     display: flex;
@@ -112,28 +127,30 @@ header h1 {
     transition: height 1s ease;
 }
 
-.new-list .icon {
+.new-category .icon {
     width: 20px;
 }
 
-.new-list:hover {
+.new-category:hover {
     height: 110px;
 }
 
-.form-add-list {
+.form-add-category {
     margin-bottom: -35px;
 }
 
-.form-add-list input, .form-add-list button {
+.form-add-category input {
+    padding: 0;
+    padding-left: 15px;
+}
+
+.form-add-category input, .form-add-category button {
     background-color: #0b0c10;
     border: 0;
+    height: 33.6px;
 }
 
-.form-add-list button {
-    padding: 4.5px 8px 4.5px 0;
-}
-
-.new-list:hover .new-list-button .icon {
+.new-category:hover .new-category-button .icon {
     animation: rotateIcon 1s linear;
 }
 
@@ -146,19 +163,71 @@ header h1 {
     }
 }
 
-.new-list-button {
+.new-category-button {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
 }
 
-.new-list-button:hover {
+.new-category-button:hover {
     cursor: default;
 }
 
-.new-list-button .icon {
+.new-category-button .icon {
     margin-left: 20px;
+}
+
+.main-control {
+    position: relative;
+    min-width: 600px;
+    flex-grow: 1;
+}
+
+.main-control h2 {
+    font-size: 2.3rem;
+    padding: 0 100px;
+    color: #46a09e;
+}
+
+.pending-list {
+    max-height: 70vh;
+    scrollbar-color: #0b0c10 transparent;
+}
+
+.pending-item {
+    background-color: #0b0c10;
+    border: 1px solid #202833;
+}
+
+.pending-item button {
+    background-color: #0b0c10;
+}
+
+.form-add-pending {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    margin: 20px 0;
+}
+
+.form-add-pending input, .form-add-pending button {
+    background-color: #0b0c10;
+    border: 0;
+    height: 43.6px;
+}
+
+.form-add-pending input {
+    width: 70%;
+    padding: 0;
+    padding-left: 15px;
+    border-radius: 10px 0 0 10px;
+}
+
+.form-add-pending button {
+    border-radius: 0 10px 10px 0;
 }
 
 .message-error {
