README was updated

--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,8 @@ header h1 {
 
 .completed-item, .completed-item button {
     background-color: #0b1919;
-    border: 0;
+    border-top: 1px solid #202833;
+    border-bottom: 1px solid #202833;
 }
 
 .completed-item:hover, .completed-item:hover button {
